Creating Bills with Form and Feedback

--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.9.0",
+    "@blueprintjs/datetime": "^3.4.0",
     "axios": "^0.18.0",
+    "dinero.js": "^1.4.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-flexbox-grid": "^2.1.2",
+    "react-number-format": "^4.0.4",
+    "react-portal": "^4.1.5",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
